--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jest": "^29.7.0",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "nanoid": "^5.0.5"
   }
 }
